--- a/server-side-render-only/package.json
+++ b/server-side-render-only/package.json
@@ -19,8 +19,9 @@
     "@babel/preset-react": "7.18.6",
     "babel-loader": "8.2.5",
     "concurrently": "7.3.0",
-    "nodemon": "2.0.18",
+    "enhanced-resolve": "^5.12.0",
     "lerna": "3.22.1",
+    "nodemon": "2.0.18",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0"
   },
